# optimizers

./: .gitignore  AGENTS.md  Activation_projection.md  INSIGHTS.md  PLAN.md  README.md  RESULTS.md  TODO.md  pyproject.toml  whiteflow.py
experiments/: compare_grassmann.py  llm_synth_smoke.py  profile_sumotrack.py  smoke_projected_activation.py  smoke_projected_gated_mlp.py  smoke_sumotrack.py
muonfactor/: README.md  data_utils.py  eval.py  eval_unsloth.py  eval_utils.py  fused_adafactor.py  hybrid_muon_adafactor_bs1.py  optimizer.py  test.py
sumotrack/: __init__.py  diagnostics.py  optimizer.py  projected_activation.py  projector.py  rotation.py
tests/: test_diagnostics.py  test_heavyball_ecc.py  test_llm_harness.py  test_optimizer.py  test_projected_activation.py  test_projector.py  test_rotation.py
whiteflow/: README.md  eval.py
