[project]
name = "optimizers"
version = "0.1.0"
description = "Collection of optimizer ideas"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch",
    "torchvision",
    "heavyball",
    "transformers>=5.12.0",
    "pyarrow>=24.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
heavyball = { path = "../HeavyBall", editable = true }
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
